[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Modules/PlayerTank/View/player_tank_view.gd" type="Script" id=2]
[ext_resource path="res://src/Modules/PlayerTank/@Assets/tank_body/tankBody_bigRed.png" type="Texture" id=3]
[ext_resource path="res://src/Modules/Managers/SkinManager/SkinManager.tscn" type="PackedScene" id=7]

[node name="PlayerTank" type="KinematicBody2D"]
z_index = 20
collision_mask = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
speed_velocity = 400
path_skins = "res://src/Modules/PlayerTank/@Assets/tank_body/"

[node name="TankBodySkinManager" parent="." instance=ExtResource( 7 )]

[node name="TankBodyCollisionPoly2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -15, -20, -21, -15, -21, 13, -14, 19, -10, 21, 10, 21, 15, 18, 21, 14, 21, -15, 18, -19, 13, -21, -14, -21 )

[node name="TankBodySprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 3 )
